src/style/style.css
html, *, a {
    border: none;
    box-sizing: border-box;
    color: inherit;
    margin: 0;
    text-decoration: none;
    user-select: none;
}

/*************************/
/* Initial layout styles */
/*************************/

.layout-wrapper {
    align-items: center;
    display: flex;
    flex-direction: column;
    gap: 20px;
    justify-content: center;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    min-height: 100vh;
}

header {
    font-weight: bold;
}

.choices-buttons-container {
    display: flex;
    justify-content: center;
    gap: 30px;
    margin: 10px;
}

footer {
    position: absolute;
    bottom: 5px;
}

/*********************/
/* Game board styles */
/*********************/

.board-wrapper {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    column-gap: 50px;
    row-gap: 20px;
}

.game-board {
    background-color: rgba(0, 255, 255, 0.3);
    display: grid;
    grid-auto-rows: 1fr;
}

.game-board .row {
    display: flex;
} 

.game-board .cell {
    border: 1px solid gray;
    height: 40px;
    width: 40px
}

.description-container {
    align-items: center;
    display: flex;
    grid-area: 2 / 1 / 3 / 3;
    justify-content: center;
}

/***************/
/* Ship images */
/***************/

.ship {
    height: 100%;
    pointer-events: none;
    transform-origin: 20px;
}

.carrier {
    width: 500%;
}

.battleship {
    width: 400%;
}

.submarine {
    width: 300%;
}

.cruiser {
    width: 300%
}

.destroyer {
    width: 200%
}

